Profile Button mobile fix

--- a/css/desktop-style.css
+++ b/css/desktop-style.css
@@ -85,9 +85,6 @@
 
   #profileButton {
 
-    width: 10vw
-    height: 10vw;
-
     vertical-align: middle;
 
     display: inline-block;
@@ -96,6 +93,18 @@
 
     margin-left: auto;
     margin-right: auto;
+
+    border-radius: 4vw;
+
+    width: 4vw;
+    height: 4vw;
+
+/*    background-image: url(../img/cat-icon.svg);
+    background-size: cover;*/
+    background-color: #ccc;
+
+    transform: translateX(55%);
+
 
   }
 
@@ -112,21 +121,6 @@
     margin-right: auto;
 
     background-size: 10vw 10vw;
-
-  }
-
-  #profileButton {
-
-    border-radius: 4vw;
-
-    width: 4vw;
-    height: 4vw;
-
-/*    background-image: url(../img/cat-icon.svg);
-    background-size: cover;*/
-    background-color: #ccc;
-
-    transform: translateX(55%);
 
   }
 
